k8s_api_client/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opa-kubernetes-api-client
spec:
  selector:
    app: opa-kubernetes-api-client
  ports:
  - port: 8181
