k8s_api_client/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-kubernetes-api-client
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opa-kubernetes-api-client
            port:
              number: 8181
